fix: 浏览器标题

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>易工程区块浏览器</title>
+  <title>德邦证券区块链</title>
 </head>
 
 <body>
